[Fix #251] Fix landing page design on mobile (and add responsive)

--- a/app/assets/stylesheets/_constants.scss
+++ b/app/assets/stylesheets/_constants.scss
@@ -5,3 +5,5 @@ $light-blue: #F2F6FA;
 $font-size-base: 16px;
 
 $page-width: 1040px;
+
+$default-padding: 15px;
