--- a/app/assets/stylesheets/_placeholders.scss
+++ b/app/assets/stylesheets/_placeholders.scss
@@ -1,14 +1,21 @@
+@import "constants";
+@import "mixins";
+
 %horizontal-list {
   list-style-type: none;
   margin: 0;
   padding: 0;
   font-size: 0px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 %horizontal-list-item {
   display: inline-block;
+}
 
-  &:last-of-type {
-    margin-right: 0;
-  }
+%page-width-container {
+  @include horizontal-padding($default-padding);
+  max-width: $page-width + 2 * $default-padding;
+  margin: 0 auto;
 }
